tests/ui/parser/recover-enum.stderr
error: expected one of `(`, `,`, `=`, `{`, or `}`, found `Bad`
  --> $DIR/recover-enum.rs:4:9
   |
LL |         Very
   |             -
   |             |
   |             expected one of `(`, `,`, `=`, `{`, or `}`
   |             help: missing `,`
LL |         Bad(usize)
   |         ^^^ unexpected token

error: expected one of `,`, `=`, or `}`, found `Stuff`
  --> $DIR/recover-enum.rs:6:9
   |
LL |         Bad(usize)
   |                   -
   |                   |
   |                   expected one of `,`, `=`, or `}`
   |                   help: missing `,`
LL |
LL |         Stuff { a: usize }
   |         ^^^^^ unexpected token

error: expected one of `,`, `=`, or `}`, found `Here`
  --> $DIR/recover-enum.rs:8:9
   |
LL |         Stuff { a: usize }
   |                           -
   |                           |
   |                           expected one of `,`, `=`, or `}`
   |                           help: missing `,`
LL |
LL |         Here
   |         ^^^^ unexpected token

error: aborting due to 3 previous errors

